[project]
name = "jupyter-io"
version = "1.0.0"
description = "Direct saving and loading of files into Jupyter notebooks"
readme = "README.md"
authors = [{ name = "Akio Taniguchi", email = "taniguchi.akio@gmail.com" }]
keywords = ["python", "jupyter-notebook"]
urls = { repository = "https://github.com/astropenguin/jupyter-io" }
license = { file = "LICENSE" }
requires-python = ">=3.8,<3.14"
dependencies = ["ipython>=7.0,<9.0"]

[dependency-groups]
dev = ["pytest>=8.3", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
