[project]
name = "jupyter-io"
version = "1.0.0"
description = "Direct saving and loading of files into Jupyter notebooks"
readme = "README.md"
authors = [{ name = "Akio Taniguchi", email = "taniguchi.akio@gmail.com" }]
keywords = ["python", "jupyter-notebook", "io"]
urls = { repository = "https://github.com/astropenguin/jupyter-io" }
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.14"
dependencies = ["ipython>=7.0,<9.0", "matplotlib>=3.0,<4.0", "pandas>=1.5,<3.0"]

[dependency-groups]
dev = ["black>=24.8", "pyright>=1.1", "pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
